# pipgraph-internal

./: .gitignore  .mcp.json  CLAUDE.md  CODEOWNERS  README.md  run-backend.sh  run-cli.sh  start-web-dev.sh  stop-backend.sh
.claude/: settings.json
backend/: .gitignore  CHANGELOG.md  CLAUDE.md  ISSUES.md  QUICKSTART_WORKFLOW.md  README.md  README_old.md  TODO.md  WORKFLOW_MVP_CHANGELOG.md  activate_env.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  test_workflow_mvp.py  workflow_checkpoints.db-shm  workflow_checkpoints.db-wal
backend/app/: .gitignore
backend/config/: para_config.py  settings.py
backend/docs/: ARCHITECTURE.md  CHECKNOTE_USAGE.md  CONFIGURATION.md  GRAPHITI_CUSTOM_ENTITIES.md  GRAPHITI_EMBEDDINGS.md  GRAPHITI_EXPLORATION_REPORT.md  LANGGRAPH_MVP_IML_INFO.md  TESTING.md  WORKFLOW_MVP.md  neo4j_verification_queries.md
backend/scripts/: __init__.py  cleanup_test_data.py  simple_neo4j_test.py  test_cascade_workflow.py  test_iteration1_crud.py  test_iteration2_mocks.py  test_iteration3_decisions.py  test_iteration4_extraction.py  test_iteration5_workflow.py  (+2 more)
pipgraph-cli/: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
pipgraph-cli/pipgraph_cli/: __init__.py  client.py  examples.py  main.py  ui.py
pipgraph-obsidian/: .gitignore  CLAUDE.md  README.md  deploy-to-vault.sh  esbuild.config.mjs  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json
pipgraph-web/: .gitignore  CLAUDE.md  package-lock.json  package.json
sandbox/: giga_test.py  pyproject.toml
(+248 files in other folders)
