[project]
name = "pipgraph-cli"
version = "0.1.0"
description = "Terminal frontend for PipGraph backend API"
authors = [
    {name = "PipGraph Team"}
]
requires-python = ">=3.12"
dependencies = [
    "websockets>=12.0",
    "rich>=13.7.0",
    "httpx>=0.27.0",
]

[project.scripts]
pipgraph = "pipgraph_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
